<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jmgarzo.newratescar.TollDetail">
    <item
        android:id="@+id/action_done_vehicle"
        android:icon="@drawable/ic_done_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="99"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
