<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    tools:context="com.jmgarzo.newratescar.VehiclesActivity"

    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_vehicles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"

        />

    <TextView
        android:id="@+id/recyclerview_vehicles_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/empty_vehicles_list" />


</FrameLayout>
