...
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_vehicle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_name"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
...
